# fluid-simulator

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  PLAN.md  README.md  arraylist.c  arraylist.h  artist.c  artist.h  main.c  math_funcitons.c  math_functions.h  particle.c  particle.h  physics.c  physics.h  shell.nix  space_partition.c  space_partition.h  todo.txt
include/core/: linked_list.h  math_utils.h  particle.h  profiler.h
include/physics/: collision.h  forces.h  integrator.h
include/render/: renderer.h
include/spatial/: grid.h  particle_factory.h
shaders/: basic.vert
src/: gpu_compute.cpp  gpu_compute.hpp  kernels.cpp  kernels.hpp  main.c  main.cpp  particles.hpp  performance_monitor.cpp  performance_monitor.hpp  physics.cpp  physics.hpp  physics_parallel.cpp  physics_parallel.hpp  profiler.hpp  spatial.cpp  spatial.hpp  sph.cpp  sph.hpp  thread_pool.hpp
src/core/: linked_list.c  math_utils.c  profiler.c
src/physics/: collision.c  forces.c  integrator.c
src/render/: renderer.c
src/spatial/: grid.c  particle_factory.c
tests/: test_kernels.cpp
